_operations/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cnm-isfong-com-gw
  namespace: cnm
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - isfong.com
        - www.isfong.com
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - isfong.com
        - www.isfong.com
      tls:
        mode: SIMPLE
        credentialName: secret-tls-cnm-isfong.com
